Concurrent System.gc() is "upgraded" to stop-the-world System.gc()

XMLWordPrintable

    • gc
    • b01

      assert(!GCCause::is_user_requested_gc(gc_cause()) || explicit_gc) failed: invariant

      V [libjvm.so+0xb3e62d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
      V [libjvm.so+0xcc069d] G1CollectedHeap::verify_before_full_collection(bool)+0x4d
      V [libjvm.so+0xd078f1] G1FullCollector::prepare_collection()+0x51
      V [libjvm.so+0xccc396] G1CollectedHeap::do_full_collection(bool, bool)+0x166
      V [libjvm.so+0x1877b55] VM_G1CollectForAllocation::doit()+0x345
      V [libjvm.so+0x1875438] VM_Operation::evaluate()+0x208
      V [libjvm.so+0x187128e] VMThread::evaluate_operation(VM_Operation*)+0x16e
      V [libjvm.so+0x1871e12] VMThread::loop()+0x2e2
      V [libjvm.so+0x1872610] VMThread::run()+0xc0
      V [libjvm.so+0x14c04ba] thread_native_entry(Thread*)+0xfa

            Assignee:
            Erik Helin
            Reporter:
            Sangheon Kim (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: