8195158: Concurrent System.gc() is "upgraded" to stop-the-world System.gc()

Reviewed-by: sjohanss, eosterlund